feat: update About page text; remove PDF from static assets

--- a/solution/backend/regulations/templates/regulations/about.html
+++ b/solution/backend/regulations/templates/regulations/about.html
@@ -68,7 +68,7 @@
                         <p>
                             This tool displays regulation text from
                             <a
-                                href="https://www.ecfr.gov/cgi-bin/ECFR?page=browse"
+                                href="https://www.ecfr.gov/"
                                 class="external"
                                 target="_blank"
                                 rel="noopener noreferrer"
@@ -78,8 +78,14 @@
                         <p>
                             When new rules (changes to regulations) become
                             effective, the Office of the Federal Register
-                            incorporates them into eCFR about
-                            <b>two business days</b> after their effective date.
+                            incorporates them into eCFR
+                            <a
+                                href="https://www.ecfr.gov/reader-aids/understanding-the-ecfr/how-is-the-ecfr-updated"
+                                class="external"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                            >about two business days</a>
+                            after their effective date.
                         </p>
                         <p>
                             This tool automatically syncs with eCFR
@@ -92,23 +98,20 @@
                         <p class="note">
                             Note: eCFR and this tool are
                             <a
-                                href="https://www.ecfr.gov/cgi-bin/ECFR?SID=7b8aba05aa8d73ae4ea6e482994e1721&mc=true&page=faq#quest7"
+                                href="https://www.ecfr.gov/reader-aids/understanding-the-ecfr/what-is-the-ecfr"
                                 class="external"
                                 target="_blank"
                                 rel="noopener noreferrer"
-                                >not formal official legal editions</a
+                                >not official legal editions</a
                             >
-                            of the CFR. If you need to check against the
-                            official materials (annual editions and Federal
-                            Register rules), see
+                            of the CFR.
                             <a
                                 href="https://www.ecfr.gov/cgi-bin/ECFR?page=userinfo"
                                 class="external"
                                 target="_blank"
                                 rel="noopener noreferrer"
-                                >eCFR User Information</a
+                                >Learn more.</a
                             >
-                            to learn more.
                         </p>
                     </div>
                     <div class="ds-l-col--6">
@@ -176,7 +179,16 @@
                                 target="_blank"
                                 rel="noopener noreferrer"
                                 >Medicaid.gov</a
-                            >. Subject matter experts on our team curate and
+                            >,
+                            <a
+                                href="https://www.cms.gov"
+                                class="external"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                >CMS.gov</a
+                            >,
+                            and other official government sites as relevant.
+                            Subject matter experts on our team curate and
                             update these links.
                         </p>
                         <p>
@@ -201,33 +213,12 @@
                 </div>
             </div>
 
-            <div class="ds-l-container">
-                <div class="ds-l-row">
-                    <div class="ds-l-col--6">
-                        <h3>Criteria for Resource Links</h3>
-                        <p>
-                            To decide which regulation sections and subparts
-                            should be designated as “related” to a published
-                            document, we use
-                            <a
-                                href="{% static 'pdfs/Criteria for eRegulations Content Placement 11.18.21.pdf' %}"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >this detailed set of criteria</a
-                            >.
-                        </p>
-                    </div>
-                    <div class="ds-l-col--6"></div>
-                </div>
-            </div>
-        </section>
-
         <section>
             <h2>Technical Details</h2>
             <p>
                 This tool has an
                 <a
-                    href="https://github.com/CMSgov/cmcs-eregulations"
+                    href="https://github.com/Enterprise-CMCS/cmcs-eregulations"
                     class="external"
                     target="_blank"
                     rel="noopener noreferrer"
@@ -256,6 +247,15 @@
                         target="_blank"
                         rel="noopener noreferrer"
                         >Federal Register rules</a
+                    >
+                </li>
+                <li>
+                    <a
+                        href="https://www.govinfo.gov/link-docs/"
+                        class="external"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >GovInfo links</a
                     >
                 </li>
             </ul>
