feat: add external link icon to internal links in UI

--- a/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
+++ b/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
@@ -150,6 +150,10 @@
         color: $primary_link_color;
         text-decoration: none;
         font-size: $font-size-sm;
+
+        &.supplemental-content-external-link {
+            display: flex;
+        }
     }
 
     .supplemental-content-external-link {
