fix: tweak css styles

--- a/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
+++ b/solution/ui/regulations/css/scss/partials/_supplemental_content.scss
@@ -150,10 +150,6 @@
         color: $primary_link_color;
         text-decoration: none;
         font-size: $font-size-sm;
-
-        &.supplemental-content-external-link {
-            display: flex;
-        }
     }
 
     .supplemental-content-external-link {
@@ -164,7 +160,7 @@
 }
 
 .internal-docs__container {
-    .supplemental-content-description > span {
+    .supplemental-content-description > span:has(.result__link--file-type) {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
